Fix responsiveness bug on firefox

--- a/css/style.css
+++ b/css/style.css
@@ -1,45 +1,37 @@
 html, body {
+	width: 100%;
 	height: 100%;
 	padding: 0;
 	margin: 0;
-	font-family: 'Mogra', cursive;
+	font-family: 'Mogra', cursive, Arial;
 	color: #FFF;
 	overflow: hidden;
 }
 
-section {
-	position: relative;
-}
-
-.text-container {
-	position: absolute; 
+section .text-container {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	margin-right: -50%;
+	z-index: 100;
 	text-align: center;
-	width: 100%;
-	height: 50%;
-	margin: auto;
-	top: 530px;
-	left: 0;
-	bottom: 0;
-	right: 0;
-	z-index: 51;
 }
 
-.text-container:before {
-	width: 395px;
-	height: 1px;
-	border-top: 4px double #FFF;
+section .text-container:before, section .text-container:after {
 	content: "";
 	display: block;
 	margin: 20px auto;
-}
-
-.text-container:after {
 	width: 395px;
 	height: 1px;
+}
+
+section .text-container:before {
 	border-top: 4px double #FFF;
-	content: "";
-	display: block;
-	margin: 20px auto;
+}
+
+section .text-container:after {
+	border-bottom: 4px double #FFF;
 }
 
 h1 {
@@ -47,51 +39,53 @@ h1 {
 	font-size: 100px;
 	font-weight: 700;
 	text-transform: uppercase;
+}
+
+h1, h3 {
 	text-shadow: 3px 3px 3px rgba(0,0,0,0.5);
 }
 
 video {
-  position: fixed;
-  top: 50%; left: 50%;
-  z-index: 1;
-  min-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: auto;
-  transform: translate(-50%, -50%);
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	z-index: 1;
+	min-width: 100%;
+	min-height: 100%;
+	transform: translate(-50%, -50%);
 }
 
 button, .button:hover, button:hover, input[type="submit"]:hover, input[type="reset"]:hover, input[type="button"]:hover, .button:focus, button:focus, input[type="submit"]:focus, input[type="reset"]:focus, input[type="button"]:focus {
-	color: white;
 	border-color: white;
-  margin-bottom: 0px;
-}
-@media screen and (max-height: 800px) {
-  .text-container {
-    top: 350px;
-  }
+	color: white;
+	margin: 0 auto;
+	display: block;
 }
 
-@media screen and (max-height: 600px) {
-  .text-container {
-    top: 163px;
-  }
+button:hover {
+	color: black;
+	background-color: white;
 }
 
-@media screen and (max-width: 500px) {
-  h1 {
-    font-size: 35px;
-  }
 
-  h3 {
-    font-size: 20px; 
-  }
+@media (max-width: 500px) {
+	h1 {
+		font-size: 50px
+	}
+	h3 {
+		font-size: 18px
+	}
+	section .text-container:before, section .text-container:after {
+		width: 240px;
+	}
 
-  .text-container:after {
-    width: 230px;
-  }
+	button, .button:hover, button:hover, input[type="submit"]:hover, input[type="reset"]:hover, input[type="button"]:hover, .button:focus, button:focus, input[type="submit"]:focus, input[type="reset"]:focus, input[type="button"]:focus {
+		line-height: 28px;
+		padding: 0 15px;
+		height: 25px;
+		line-height: 28px;
+		font-size: 9px;
+	}
 
-  .text-container:before {
-    width: 230px;
-  }
 }
+
